--- a/saiIndustries/requirements.txt
+++ b/saiIndustries/requirements.txt
@@ -1,53 +1,7 @@
-asgiref==3.3.1
-atomicwrites==1.4.0
-attrs==21.2.0
-botocore==1.20.86
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
-colorama==0.4.4
-coreschema==0.0.4
-cryptography==3.4.7
-defusedxml==0.7.1
-dj-database-url==0.5.0
-Django==3.1.7
-django-heroku==0.3.1
-djangorestframework==3.12.4
-gitdb==4.0.7
-idna==2.10
-iniconfig==1.1.1
-itypes==1.2.0
-Jinja2==3.0.1
-jmespath==0.10.0
-lazy-object-proxy==1.6.0
-MarkupSafe==2.0.1
-oauthlib==3.1.0
-packaging==21.0
-pluggy==0.13.1
-psycopg2==2.8.6
-py==1.10.0
-pycparser==2.20
-pycryptodome==3.10.1
-PyJWT==2.0.1
-pyparsing==2.4.7
-pytest==6.2.4
-python-dateutil==2.8.1
-python-decouple==3.6
-python3-openid==3.2.0
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-s3transfer==0.4.2
-six==1.15.0
-smmap==4.0.0
-social-auth-app-django==4.0.0
-social-auth-core==4.1.0
-sqlparse==0.4.1
-tabulate==0.8.9
-toml==0.10.2
-uritemplate==3.0.1
-urllib3==1.26.4
-whitenoise==5.2.0
-wrapt==1.12.1
-zope.interface==5.4.0
+asgiref==3.5.0
+Django==3.2.13
+gunicorn==20.1.0
+pytz==2022.1
+sqlparse==0.4.2
+typing-extensions==4.2.0
+whitenoise==6.0.0
