--- a/saiIndustries/requirements.txt
+++ b/saiIndustries/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.5.0
+decouple==0.0.7
 dj-database-url==0.5.0
 Django==3.2.13
 django-heroku==0.3.1
 gunicorn==20.1.0
 psycopg2==2.9.3
+python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
 typing-extensions==4.2.0
