--- a/saiIndustries/requirements.txt
+++ b/saiIndustries/requirements.txt
@@ -1,11 +1,2 @@
-asgiref==3.5.0
-decouple==0.0.7
-dj-database-url==0.5.0
+ gunicorn
 Django==3.2.13
-gunicorn==20.1.0
-psycopg2==2.9.3
-python-decouple==3.6
-pytz==2022.1
-sqlparse==0.4.2
-typing-extensions==4.2.0
-whitenoise==6.0.0
