--- a/saiIndustries/requirements.txt
+++ b/saiIndustries/requirements.txt
@@ -1,6 +1,12 @@
  gunicorn
-Django==3.2.13
 dj-database-url==0.5.0 
 python-decouple==3.6
+django>=3.2,<3.3
+psycopg2
+django-dotenv
+django-htmx
+pint
+django-storages
+boto3
 
 
